# docker-rpi

./: docker-compose.yaml
rpiserver2/: .dockerignore  Dockerfile  pyproject.toml
rpiserver2/rpiserver2/: Dummypi.py  server.py
